<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMedication">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="238dp"
        android:layout_height="121dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144"
        app:srcCompat="@drawable/mynextlvldrawingcashmere" />

    <ImageView
        android:id="@+id/Facebook"
        android:layout_width="26dp"
        android:layout_height="34dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toStartOf="@+id/Instagram"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Instagram"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fb" />

    <ImageView
        android:id="@+id/Instagram"
        android:layout_width="26dp"
        android:layout_height="34dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/Twitter"
        app:layout_constraintEnd_toStartOf="@+id/Twitter"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Twitter"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/insta" />

    <ImageView
        android:id="@+id/Twitter"
        android:layout_width="26dp"
        android:layout_height="34dp"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347"
        app:srcCompat="@drawable/twt22" />

    <EditText
        android:id="@+id/medicationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="292dp"
        android:ems="10"
        android:hint="@string/medication_text"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/medicationMG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/medication_mg_text"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicationTitle" />

    <EditText
        android:id="@+id/medSchedule"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/schedule_text"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicationMG" />

    <Button
        android:id="@+id/addMedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/textround"
        android:onClick="addMed"
        android:text="@string/add_medication_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medSchedule" />

</androidx.constraintlayout.widget.ConstraintLayout>